Backend major component done
